Implements Authors and Articles endpoints

--- a/docker/development/.env
+++ b/docker/development/.env
@@ -1,10 +1,12 @@
-DEVELOPMENT=True
 DEBUG = True
 
 # PostgreSQL
-
 POSTGRES_HOST=database
 POSTGRES_DB=ihero
 POSTGRES_USER=ihero
 POSTGRES_PASSWORD=ihero
 
+# Create first super user
+DJANGO_SU_NAME=superuser
+DJANGO_SU_EMAIL=superuser@mail.com
+DJANGO_SU_PASSWORD=12345 
