Sets up production docker environment

--- a/docker/production/.env
+++ b/docker/production/.env
@@ -10,5 +10,5 @@ DJANGO_SU_EMAIL=superuser@mail.com
 DJANGO_SU_PASSWORD=12345
 
 # Django 
-SECRET_KEY=django-insecure-%)yw0hdl$^h!cd)m58bh=pqb$3q9r^kw*q^a*oqjv+$chkquoh
-DEBUG=True
+SECRET_KEY=b4811m8t88a-5^e=s^mc0yp@%9ww6#rs1m4pu9$x!d$*anghnr
+DEBUG=False
