--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ Pillow = "^8.2.0"
 django-rest-auth = "^0.9.5"
 django-allauth = "^0.44.0"
 djangorestframework-simplejwt = "^4.7.1"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.24.1"
